feat(api): add members endpoint (#315)
