# api/server.js
@@ -7,6 +7,7 @@ const { router: docsRouter } = require('./docs');
 const { router: uexRouter } = require('./uex');
 const { router: loginRouter } = require('./login');
 const { router: activityLogRouter } = require('./activityLog');
+const { router: membersRouter } = require('./members');
 const { authMiddleware } = require('./auth');
 
 function createApp() {
@@ -28,6 +29,7 @@ function createApp() {
   app.use('/api', authMiddleware);
   app.use('/api/activity-log', activityLogRouter);
   app.use('/api/uex', uexRouter);
+  app.use('/api/members', membersRouter);
 
   return app;
 }
